packages/archiver_ffi/native/archiver_lib/archiver_lib.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef unsigned char GoUint8;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
extern void InitializeDartApi(void* p0);
extern GoUint8 CloseNativeDartPort(GoInt64 p0);
extern void StartWork(GoInt64 p0);
extern void FreeWorkStructMemory(GoInt64* p0);
extern void StartUser(GoInt64 p0);
extern void FreeUserStructMemory(GoInt64* p0);