packages/archiver_ffi/lib/generated/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Docs for SquashArchiverLib
class SquashArchiverLib {
  /// Holds the Dynamic library.
  final ffi.DynamicLibrary _dylib;

  /// The symbols are looked up in [dynamicLibrary].
  SquashArchiverLib(ffi.DynamicLibrary dynamicLibrary)
      : _dylib = dynamicLibrary;

  void InitializeDartApi(
    ffi.Pointer<ffi.Void> api,
  ) {
    _InitializeDartApi ??=
        _dylib.lookupFunction<_c_InitializeDartApi, _dart_InitializeDartApi>(
            'InitializeDartApi');
    return _InitializeDartApi(
      api,
    );
  }

  _dart_InitializeDartApi _InitializeDartApi;

  int CloseNativeDartPort(
    int port,
  ) {
    _CloseNativeDartPort ??= _dylib.lookupFunction<_c_CloseNativeDartPort,
        _dart_CloseNativeDartPort>('CloseNativeDartPort');
    return _CloseNativeDartPort(
      port,
    );
  }

  _dart_CloseNativeDartPort _CloseNativeDartPort;

  void StartWork(
    int port,
  ) {
    _StartWork ??=
        _dylib.lookupFunction<_c_StartWork, _dart_StartWork>('StartWork');
    return _StartWork(
      port,
    );
  }

  _dart_StartWork _StartWork;

  void FreeWorkStructMemory(
    ffi.Pointer<ffi.Int64> pointer,
  ) {
    _FreeWorkStructMemory ??= _dylib.lookupFunction<_c_FreeWorkStructMemory,
        _dart_FreeWorkStructMemory>('FreeWorkStructMemory');
    return _FreeWorkStructMemory(
      pointer,
    );
  }

  _dart_FreeWorkStructMemory _FreeWorkStructMemory;

  void StartUser(
    int port,
  ) {
    _StartUser ??=
        _dylib.lookupFunction<_c_StartUser, _dart_StartUser>('StartUser');
    return _StartUser(
      port,
    );
  }

  _dart_StartUser _StartUser;

  void FreeUserStructMemory(
    ffi.Pointer<ffi.Int64> pointer,
  ) {
    _FreeUserStructMemory ??= _dylib.lookupFunction<_c_FreeUserStructMemory,
        _dart_FreeUserStructMemory>('FreeUserStructMemory');
    return _FreeUserStructMemory(
      pointer,
    );
  }

  _dart_FreeUserStructMemory _FreeUserStructMemory;
}

class __darwin_pthread_handler_rec extends ffi.Struct {
  ffi.Pointer<ffi.NativeFunction<_typedefC_1>> __routine;

  ffi.Pointer<ffi.Void> __arg;

  ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

class _opaque_pthread_attr_t extends ffi.Struct {}

class _opaque_pthread_cond_t extends ffi.Struct {}

class _opaque_pthread_condattr_t extends ffi.Struct {}

class _opaque_pthread_mutex_t extends ffi.Struct {}

class _opaque_pthread_mutexattr_t extends ffi.Struct {}

class _opaque_pthread_once_t extends ffi.Struct {}

class _opaque_pthread_rwlock_t extends ffi.Struct {}

class _opaque_pthread_rwlockattr_t extends ffi.Struct {}

class _opaque_pthread_t extends ffi.Struct {}

class _GoString_ extends ffi.Struct {
  ffi.Pointer<ffi.Int8> p;

  @ffi.Int64()
  int n;
}

class GoInterface extends ffi.Struct {
  ffi.Pointer<ffi.Void> t;

  ffi.Pointer<ffi.Void> v;
}

class GoSlice extends ffi.Struct {
  ffi.Pointer<ffi.Void> data;

  @ffi.Int64()
  int len;

  @ffi.Int64()
  int cap;
}

const int __DARWIN_ONLY_64_BIT_INO_T = 0;

const int __DARWIN_ONLY_VERS_1050 = 0;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_64_BIT_INO_T = '\$INODE64';

const String __DARWIN_SUF_1050 = '\$1050';

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

typedef _c_InitializeDartApi = ffi.Void Function(
  ffi.Pointer<ffi.Void> api,
);

typedef _dart_InitializeDartApi = void Function(
  ffi.Pointer<ffi.Void> api,
);

typedef _c_CloseNativeDartPort = ffi.Uint8 Function(
  ffi.Int64 port,
);

typedef _dart_CloseNativeDartPort = int Function(
  int port,
);

typedef _c_StartWork = ffi.Void Function(
  ffi.Int64 port,
);

typedef _dart_StartWork = void Function(
  int port,
);

typedef _c_FreeWorkStructMemory = ffi.Void Function(
  ffi.Pointer<ffi.Int64> pointer,
);

typedef _dart_FreeWorkStructMemory = void Function(
  ffi.Pointer<ffi.Int64> pointer,
);

typedef _c_StartUser = ffi.Void Function(
  ffi.Int64 port,
);

typedef _dart_StartUser = void Function(
  int port,
);

typedef _c_FreeUserStructMemory = ffi.Void Function(
  ffi.Pointer<ffi.Int64> pointer,
);

typedef _dart_FreeUserStructMemory = void Function(
  ffi.Pointer<ffi.Int64> pointer,
);

typedef _typedefC_1 = ffi.Void Function(
  ffi.Pointer<ffi.Void>,
);
